# bt_api_ripio

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/bt_api_ripio/: __init__.py  plugin.py  registry_registration.py
src/bt_api_ripio/configs/: ripio.yaml
src/bt_api_ripio/errors/: __init__.py
src/bt_api_ripio/exchange_data/: __init__.py
src/bt_api_ripio/feeds/: __init__.py
src/bt_api_ripio/feeds/live_ripio/: __init__.py  request_base.py  spot.py
tests/containers/exchanges/: test_ripio_exchange_data.py
tests/feeds/: test_ripio_request_data_extra.py
